Fixing a few bugs in signal related to deleting one while in a signal call, and making some changes to color and button, misc bug fixes
Former-commit-id: 2ac99fd19f015ceeae470f9701c4f578fae6c038 [formerly 932e28bfc8714d2da1a353b85ccc8a3f9da178cf]
Former-commit-id: d806da02e9407155be0d294a21f468e92619f21b

--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -103,7 +103,9 @@
     <ClCompile Include="Source\Render\Scene\button.cpp">
       <Filter>Source Files\Render\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Render\Scene\primitives.cpp" />
+    <ClCompile Include="Source\Render\Scene\primitives.cpp">
+      <Filter>Source Files\Render\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Animation\frameSwapper.h">
